--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -14,5 +14,11 @@
     "fees": "Składki",
     "equipmentInvetory": "Inwentarz sprzętu",
     "logout": "Wyloguj"
+  },
+  "navbar": {
+    "title": "OSP HELPERS",
+    "menu": {
+      "changePassword": "Zmień hasło"
+    }
   }
 }
