Add pagination component

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -21,5 +21,10 @@
     "menu": {
       "changePassword": "Zmień hasło"
     }
+  },
+  "pagination": {
+    "itemsPerPage": "Elementów na stronie",
+    "nextPage": "Następna strona",
+    "previousPage": "Poprzednia strona"
   }
 }
