Add view for equipment, with CRUD actions

--- a/src/assets/i18n/pl/firefighters.json
+++ b/src/assets/i18n/pl/firefighters.json
@@ -9,7 +9,7 @@
     "gender": "Płeć",
     "addLabel": "Dodaj strażaka",
     "action": {
-      "add": "Dodaj"
+      "add": "Dodaj strażaka"
     },
     "types": {
       "MEMBER": "Członek",
