Add medicalexamination and course completition date field to firefighters and make changes in table components

--- a/src/assets/i18n/pl/firefighters.json
+++ b/src/assets/i18n/pl/firefighters.json
@@ -8,6 +8,8 @@
     "type": "Rodzaj",
     "gender": "Płeć",
     "addLabel": "Dodaj strażaka",
+    "courseCompletitionDate": "Data ukończenia kursu",
+    "medicalExaminationDate": "Data badań lekarskich",
     "action": {
       "add": "Dodaj strażaka"
     },
