Add login system

--- a/src/assets/i18n/pl/firefighters.json
+++ b/src/assets/i18n/pl/firefighters.json
@@ -10,6 +10,7 @@
     "addLabel": "Dodaj strażaka",
     "courseCompletitionDate": "Data ukończenia kursu",
     "medicalExaminationDate": "Data badań lekarskich",
+    "administrator": "Administrator",
     "action": {
       "add": "Dodaj strażaka"
     },
